--- a/src/transfusi/FormPasien.form
+++ b/src/transfusi/FormPasien.form
@@ -123,7 +123,7 @@
                   <Color blue="ff" green="ff" red="ff" type="rgb"/>
                 </Property>
                 <Property name="horizontalAlignment" type="int" value="0"/>
-                <Property name="text" type="java.lang.String" value=" Form Transfusi Pasien"/>
+                <Property name="text" type="java.lang.String" value=" Form Pasien"/>
               </Properties>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
